--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,19 @@
 @tailwind utilities;
 
 
-body{
+body {
     background-color: rgb(15 23 42);
+}
+
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
